--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Khyaati Sharma</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico?v=2">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,15 +11,15 @@
   </head>
   <body>
     <div class="top_container">
-      <img class="top-cloud" src="images/cloud.png" alt="cloud">
+      <img class="top-cloud" src="cloud.png" alt="cloud">
       <h1>I'm Khyaati.</h1>
       <h2>a <snap class="pro">pro</snap>grammer.</p>
-      <img class="bottom-cloud" src="images/cloud.png" alt="cloud">
-      <img src="images/mountain.png" alt="mountain">
+      <img class="bottom-cloud" src="cloud.png" alt="cloud">
+      <img src="mountain.png" alt="mountain">
     </div>
     <div class="middle-container">
       <div class="profile">
-        <img src="images/prof.png" alt="profile pic">
+        <img src="prof.png" alt="profile pic">
         <h2>Hello.</h2>
         <p class="intro">I am a web-developer enthusiast. Currently, an under-grad in engineering. I hope you enjoy checking out my websites :)</p>
       </div>
@@ -27,12 +27,12 @@
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="develop" src="images/develop.png" alt="web-dev">
+          <img class="develop" src="develop.png" alt="web-dev">
           <h3>Design & Development</h3>
           <p class="code-skill-desc">I'm passionate about web-development and I love creating websites. I started my front-end journery recently, but I absolutely love messing with tools and designs.</p>
         </div>
         <div class="skill-row">
-          <img class="write" src="images/pen2.png" alt="writing">
+          <img class="write" src="pen2.png" alt="writing">
           <h3>Writing</h3>
           <p class="write-skill-desc">I absolutely love imagining characters and worlds of my own and bringing them to life through writing! I've always been drawn to books and philosophy. Reading is my caffeine.</p>
         </div>
