--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h2>Get In Touch</h2>
         <h3>Feel free to ping me!</h3>
         <p class="talk">You like reading or coding, with a warm cup of coffee or just wanna say hi? Let's talk and chill together!</p>
-        <a class="btn" href="mailto:peehu132@gmail.com">CONTACT ME</a>
+        <a class="btn" href="mailto:nedjemcaven18@gmail.com">CONTACT ME</a>
       </div>
     </div>
 
