--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1>I'm Khyaati.</h1>
       <h2>a <snap class="pro">pro</snap>grammer.</p>
       <img class="bottom-cloud" src="cloud.png" alt="cloud">
-      <img src="mountain.png" alt="mountain">
+      <img class="mountain" src="mountain.png" alt="mountain">
     </div>
     <div class="middle-container">
       <div class="profile">
@@ -26,12 +26,12 @@
       <hr>
       <div class="skills">
         <h2>My Skills.</h2>
-        <div class="skill-row">
+        <div class="skill-row1">
           <img class="develop" src="develop.png" alt="web-dev">
           <h3>Design & Development</h3>
           <p class="code-skill-desc">I'm passionate about web-development and I love creating websites. I started my front-end journery recently, but I absolutely love messing with tools and designs.</p>
         </div>
-        <div class="skill-row">
+        <div class="skill-row2">
           <img class="write" src="pen2.png" alt="writing">
           <h3>Writing</h3>
           <p class="write-skill-desc">I absolutely love imagining characters and worlds of my own and bringing them to life through writing! I've always been drawn to books and philosophy. Reading is my caffeine.</p>
