--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
       <hr>
       <div class="skills">
         <h2>My Skills.</h2>
-        <div class="skill-row1">
+        <div class="skill-row">
           <img class="develop" src="develop.png" alt="web-dev">
           <h3>Design & Development</h3>
           <p class="code-skill-desc">I'm passionate about web-development and I love creating websites. I started my front-end journery recently, but I absolutely love messing with tools and designs.</p>
         </div>
-        <div class="skill-row2">
+        <div class="skill-row">
           <img class="write" src="pen2.png" alt="writing">
           <h3>Writing</h3>
           <p class="write-skill-desc">I absolutely love imagining characters and worlds of my own and bringing them to life through writing! I've always been drawn to books and philosophy. Reading is my caffeine.</p>
